--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   ],
   "dependencies": {
     "chess.js": "^1.0.0-beta.6",
-    "http-server": "^14.1.1",
-    "jquery": ">=3.4.1"
+    "jquery": ">=3.4.1",
+    "next": "^13.1.1",
+    "openai": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "csso": "3.5.1",
     "fs-plus": "3.1.1",
+    "html-webpack-plugin": "^5.5.1",
+    "http-server": "^14.1.1",
     "kidif": "1.1.0",
     "mustache": "2.3.0",
-    "standard": "10.0.2",
-    "uglify-js": "3.6.0"
+    "standard": "^17.1.0",
+    "style-loader": "^3.3.3",
+    "uglify-js": "3.6.0",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.2"
   },
   "scripts": {
-    "build": "standard lib/chessboard.js && node scripts/build.js",
-    "standard": "standard --fix lib/*.js website/js/*.js",
-    "website": "node scripts/website.js"
+    "build": "webpack && standard lib/chessboard.js"
   }
 }
