--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "homepage": "https://chessboardjs.com",
   "repository": {
     "type": "git",
-    "url": "git://github.com/oakmac/chessboardjs.git"
+    "url": "git://github.com/vc64/chessGPT.git"
   },
   "files": [
     "dist/"
   ],
   "dependencies": {
     "chess.js": "^1.0.0-beta.6",
+    "chessground": "^8.3.9",
     "jquery": ">=3.4.1",
     "next": "^13.1.1",
     "openai": "^3.1.0",
@@ -29,9 +30,14 @@
     "style-loader": "^3.3.3",
     "uglify-js": "3.6.0",
     "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.2"
+    "webpack-cli": "^5.1.2",
+    "webpack-dev-server": "^4.15.0"
   },
   "scripts": {
-    "build": "webpack && standard lib/chessboard.js"
-  }
+    "build": "webpack",
+    "start": "webpack serve --open"
+  },
+  "name": "chessgpt",
+  "version": "1.0.0",
+  "main": "webpack.config.js"
 }
