--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -93,6 +93,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-      - name: secret
-        env:
-          secret_key: ${{ secrets.API_KEY }}
+#       - name: secret
+#         env:
+#           secret_key: ${{ secrets.API_KEY }}
